--- a/sourse/scss/modules/_b-header.scss
+++ b/sourse/scss/modules/_b-header.scss
@@ -179,7 +179,7 @@
         color: #4d5964;
         padding-left: 25px;
         position: relative;
-        letter-spacing: -0.8px;
+        letter-spacing: -1px;
         &:before{
             content:"";
             display: block;
